--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
         </fieldset>
         <fieldset class="ad-form__element">
           <label class="ad-form__label" for="price">Цена за ночь, руб.</label>
-          <input id="price" name="price" type="number" placeholder="5000" max="1000000" required>
+          <input id="price" name="price" type="number" placeholder="5000" max="1000000" required min="1000">
         </fieldset>
         <fieldset class="ad-form__element ad-form__element--time">
           <label class="ad-form__label" for="timein">Время заезда и выезда</label>
@@ -247,6 +247,12 @@
       <button class="error__button">Попробовать снова</button>
     </div>
   </template>
+  <script src="js/utilModule.js"></script>
+  <script src="js/dataModule.js"></script>
+  <script src="js/pinModule.js"></script>
+  <script src="js/cardModule.js"></script>
+  <script src="js/formModule.js"></script>
+  <script src="js/mapModule.js"></script>
   <script src="js/main.js"></script>
 </body>
 </html>
