--- a/index.html
+++ b/index.html
@@ -248,6 +248,7 @@
     </div>
   </template>
   <script src="js/utilModule.js"></script>
+  <script src="js/loadModule.js"></script>
   <script src="js/dataModule.js"></script>
   <script src="js/pinModule.js"></script>
   <script src="js/cardModule.js"></script>
