--- a/index.html
+++ b/index.html
@@ -202,6 +202,13 @@
     </ul>
   </footer>
 
+  <section class="popup popup--error popup--hidden">
+    <button type="button" class="popup__close">Закрыть</button>
+    <img src="img/keksobooking.svg" alt="Логотип" width="112" height="112" class="popup__logo">
+    <h2 class="popup__heading">Упс, произошла ошибка :(</h2>
+    <p class="popup__text"></p>
+  </section>
+
   <!-- Модальное окно с информацией об объявлении -->
   <template id="card">
     <article class="map__card popup">
