--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     <!-- Форма объявления -->
     <section class="notice">
       <h2 class="notice__title">Ваше объявление</h2>
-      <form class="ad-form" method="post" enctype="multipart/form-data" autocomplete="off">
+      <form class="ad-form" method="post" enctype="multipart/form-data" autocomplete="off" action="https://21.javascript.pages.academy/keksobooking">
         <fieldset class="ad-form-header">
           <legend class="ad-form-header__title">Ваша фотография (для карты)</legend>
           <div class="ad-form-header__upload">
@@ -260,6 +260,7 @@
   <script src="js/pinModule.js"></script>
   <script src="js/cardModule.js"></script>
   <script src="js/formModule.js"></script>
+  <script src="js/uploadModule.js"></script>
   <script src="js/mapModule.js"></script>
   <script src="js/main.js"></script>
 </body>
