--- a/index.html
+++ b/index.html
@@ -258,6 +258,7 @@
   <script src="js/loadModule.js"></script>
   <script src="js/dataModule.js"></script>
   <script src="js/pinModule.js"></script>
+  <script src="js/debounce.js"></script>
   <script src="js/renderModule.js"></script>
   <script src="js/cardModule.js"></script>
   <script src="js/formModule.js"></script>
