--- a/index.html
+++ b/index.html
@@ -254,16 +254,7 @@
       <button class="error__button">Попробовать снова</button>
     </div>
   </template>
-  <script src="js/utilModule.js"></script>
-  <script src="js/loadModule.js"></script>
-  <script src="js/dataModule.js"></script>
-  <script src="js/pinModule.js"></script>
-  <script src="js/debounce.js"></script>
-  <script src="js/renderModule.js"></script>
-  <script src="js/cardModule.js"></script>
-  <script src="js/formModule.js"></script>
-  <script src="js/uploadModule.js"></script>
-  <script src="js/mapModule.js"></script>
-  <script src="js/main.js"></script>
+  <script src="public/bundle.js"></script>
+
 </body>
 </html>
