--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
               <img src="img/muffin-grey.svg" alt="Аватар пользователя" width="40" height="44">
             </div>
             <div class="ad-form__field">
-              <input type="file" id="avatar" name="avatar" class="ad-form-header__input visually-hidden">
+              <input type="file" id="avatar" name="avatar" class="ad-form-header__input visually-hidden" accept="image/*,image/jpeg">
               <label class="ad-form-header__drop-zone" for="avatar">Загрузить<br>фото...</label>
             </div>
             <p class="ad-form-header__info">Заполните все обязательные поля, назначьте цену, загрузите фотографии. Придумайте интересное описание. Оно сделает объявление более живым и привлекательным. Получившееся объявление должно давать гостям полное представление о вашем жилье.</p>
@@ -254,7 +254,19 @@
       <button class="error__button">Попробовать снова</button>
     </div>
   </template>
-  <script src="public/bundle.js"></script>
+  <script src="js/utilModule.js"></script>
+  <script src="js/loadModule.js"></script>
+  <script src="js/dataModule.js"></script>
+  <script src="js/pinModule.js"></script>
+  <script src="js/debounceModule.js"></script>
+  <script src="js/renderModule.js"></script>
+  <script src="js/cardModule.js"></script>
+  <script src="js/formModule.js"></script>
+  <script src="js/fileModule.js"></script>
+  <script src="js/uploadModule.js"></script>
+  <script src="js/mapModule.js"></script>
+  <script src="js/main.js"></script>
+  <!--<script src="public/bundle.js"></script>-->
 
 </body>
 </html>
