--- a/index.html
+++ b/index.html
@@ -254,8 +254,7 @@
       <button class="error__button">Попробовать снова</button>
     </div>
   </template>
-  <script src="js/utilModule.js"></script>
-  <script src="js/loadModule.js"></script>
+  <!--<script src="js/utilModule.js"></script>
   <script src="js/dataModule.js"></script>
   <script src="js/pinModule.js"></script>
   <script src="js/debounceModule.js"></script>
@@ -265,8 +264,8 @@
   <script src="js/fileModule.js"></script>
   <script src="js/uploadModule.js"></script>
   <script src="js/mapModule.js"></script>
-  <script src="js/main.js"></script>
-  <!--<script src="public/bundle.js"></script>-->
+  <script src="js/main.js"></script>-->
+  <script src="public/bundle.js"></script>
 
 </body>
 </html>
