--- a/index.html
+++ b/index.html
@@ -255,6 +255,7 @@
     </div>
   </template>
   <!--<script src="js/utilModule.js"></script>
+  <script src="js/loadModule.js"></script>
   <script src="js/dataModule.js"></script>
   <script src="js/pinModule.js"></script>
   <script src="js/debounceModule.js"></script>
@@ -262,7 +263,6 @@
   <script src="js/cardModule.js"></script>
   <script src="js/formModule.js"></script>
   <script src="js/fileModule.js"></script>
-  <script src="js/uploadModule.js"></script>
   <script src="js/mapModule.js"></script>
   <script src="js/main.js"></script>-->
   <script src="public/bundle.js"></script>
